# Numerical_Methods_LAB3

./: .gitignore  README.md
Programms/: Tables.nb  Tables2.nb  Tables3.nb  konev_visualisation.nb
Programms/Code/: CMakeLists.txt  main.cpp
Programms/Code/Libs/: PDEProblem.cpp  PDEProblem.h  PDESolver.cpp  PDESolver.h
QuastionReport/: Report_LAB3.aux  Report_LAB3.tex
